# docs/swagger.yaml
@@ -1,5 +1,17 @@
 basePath: /
 definitions:
+  handlers.LoginRequest:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  handlers.LoginResponse:
+    properties:
+      token:
+        type: string
+    type: object
   models.User:
     properties:
       age:
@@ -24,25 +36,33 @@ definitions:
 host: localhost:8080
 info:
   contact: {}
-  description: CRUD API using Go and MySQL
+  description: CRUD API using Go and MySQL with JWT authentication
   title: Go CRUD API
   version: "1.0"
 paths:
-  /users:
-    get:
-      description: Retrieve all users
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: Generate JWT token
+      parameters:
+      - description: Login credentials
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.LoginRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/models.User'
-            type: array
-      summary: Get all users
+            $ref: '#/definitions/handlers.LoginResponse'
+      summary: Login user
       tags:
-      - Users
+      - Auth
+  /users:
     post:
       consumes:
       - application/json
@@ -129,4 +149,9 @@ paths:
       summary: Update a user
       tags:
       - Users
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
