# middleware/jwt_middleware.go
@@ -1,0 +1,27 @@
+package middleware
+
+import (
+	"demo_crud/utils"
+	"net/http"
+	"strings"
+)
+
+// JWTMiddleware protects routes
+func JWTMiddleware(next http.Handler) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		authHeader := r.Header.Get("Authorization")
+		if authHeader == "" {
+			http.Error(w, "Missing Authorization header", http.StatusUnauthorized)
+			return
+		}
+
+		tokenStr := strings.Replace(authHeader, "Bearer ", "", 1)
+		_, err := utils.ValidateToken(tokenStr)
+		if err != nil {
+			http.Error(w, "Invalid or expired token", http.StatusUnauthorized)
+			return
+		}
+
+		next.ServeHTTP(w, r)
+	})
+}
