# routes/routes.go
@@ -2,14 +2,22 @@ package routes
 
 import (
 	"demo_crud/handlers"
+	"demo_crud/middleware"
 
 	"github.com/gorilla/mux"
 )
 
 func RegisterRoutes(router *mux.Router) {
-	router.HandleFunc("/users", handlers.CreateUser).Methods("POST")
-	router.HandleFunc("/users", handlers.GetUsers).Methods("GET")
-	router.HandleFunc("/users/{id}", handlers.GetUser).Methods("GET")
-	router.HandleFunc("/users/{id}", handlers.UpdateUser).Methods("PUT")
-	router.HandleFunc("/users/{id}", handlers.DeleteUser).Methods("DELETE")
+	// Public route
+	router.HandleFunc("/login", handlers.Login).Methods("POST")
+
+	// Protected routes
+	protected := router.PathPrefix("/").Subrouter()
+	protected.Use(middleware.JWTMiddleware)
+
+	protected.HandleFunc("/users", handlers.CreateUser).Methods("POST")
+	protected.HandleFunc("/users", handlers.GetUsers).Methods("GET")
+	protected.HandleFunc("/users/{id}", handlers.GetUser).Methods("GET")
+	protected.HandleFunc("/users/{id}", handlers.UpdateUser).Methods("PUT")
+	protected.HandleFunc("/users/{id}", handlers.DeleteUser).Methods("DELETE")
 }
